force-app/main/default/objects/Region_and_Zone_Mapping__c/Region_and_Zone_Mapping__c.object-meta.xml
<CustomObject>
    <label>Region and Zone Mapping</label>
    <nameField>
        <displayFormat>RZ{0000}</displayFormat>
        <label>Region and Zone Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region and Zone Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>