force-app/main/default/objects/Region_and_Zone_Mapping__c/fields/Region_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Group_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region/Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>