force-app/main/default/objects/Region_and_Zone_Mapping__c/fields/Team_Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Team_Zone_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team/Zone Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>