force-app/main/default/objects/Region_and_Zone_Mapping__c/fields/Team_Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Zone_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team/Zone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>