force-app/main/default/objects/Region_and_Zone_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region_Group_Code__c</columns>
    <columns>Region_Group_Name__c</columns>
    <columns>Team_Zone_Code__c</columns>
    <columns>Team_Zone_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>